--- a/index.html
+++ b/index.html
@@ -33,16 +33,8 @@
       <option value="OTHER">OTHER</option>
     </select>
 
-    <label for="deadline">Deadline:</label>
-
-    <input type="datetime-local" id="deadline" name="deadline" required style=" width: 100%;
-    height: 50px;
-    padding: 1px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    margin-bottom: 8px;
-    background-color: white;
-    font-size: 15px;">
+   <label for="keterangan">Keterangan:</label>
+    <textarea id="keterangan" name="keterangan" maxlength="400" required></textarea>
   
     <center><input type="submit" value="Submit" onclick="kirimPesan()"></center>
    
